--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,6 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.knowm.xchart/xchart
+    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.5.2'
 }
